--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,7 @@ dependencies:
 - conda-forge::jupyterlab
 - scipy
 - seaborn
-#- pytorch::pytorch
+- pytorch::pytorch
 - pip:
   - pip
   - torchvision
