--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
 - numpy
 - matplotlib
 - pandas
-- scikit-learn
+- scikit-learn>=0.20
 - ipykernel
 - conda-forge::jupyter_contrib_nbextensions
 - conda-forge::jupyterlab
